Change footer contact info to tel/mailto links

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BRG Travels</title>
     <link rel="stylesheet" href="CustomSASS/style.css">
-    <script src="https://kit.fontawesome.com/ef02b05d8a.js" crossorigin="anonymous"></script></head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <link rel="shortcut icon" href="/Icons/globe-solid.svg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/ef02b05d8a.js" crossorigin="anonymous"></script>
+</head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<link rel="shortcut icon" href="/Icons/globe-solid.svg" type="image/x-icon">
+
 <body>
     <header>
         <div id="logo">
@@ -84,13 +87,22 @@
 
                 <div class="tab-content">
                     <div class="content about-content">
-                        Welcome to our world of discovery and exploration! We're a team of passionate adventurers dedicated to uncovering the Earth's wonders. From oceans to mountains, we embark on journeys that inspire curiosity and ignite the spirit of adventure. Join us as we unveil the mysteries of nature and share our passion for exploration.
+                        Welcome to our world of discovery and exploration! We're a team of passionate adventurers
+                        dedicated to uncovering the Earth's wonders. From oceans to mountains, we embark on journeys
+                        that inspire curiosity and ignite the spirit of adventure. Join us as we unveil the mysteries of
+                        nature and share our passion for exploration.
                     </div>
                     <div class="content choose-us-content">
-                        Discover the world with us and experience the extraordinary. Our team of seasoned explorers brings expertise and diversity to every expedition. We're committed to responsible exploration, offering educational opportunities and fostering a global community of like-minded adventurers. Choose us for an unforgettable journey that expands horizons and promotes sustainable curiosity.
+                        Discover the world with us and experience the extraordinary. Our team of seasoned explorers
+                        brings expertise and diversity to every expedition. We're committed to responsible exploration,
+                        offering educational opportunities and fostering a global community of like-minded adventurers.
+                        Choose us for an unforgettable journey that expands horizons and promotes sustainable curiosity.
                     </div>
                     <div class="content mission-content">
-                        Our mission is clear: ignite wonder, inspire learning, and champion conservation. We venture into uncharted territories, sharing the beauty and importance of nature. Through our expeditions and outreach, we cultivate a deep connection to the environment, fostering a sense of responsibility and driving conservation efforts.
+                        Our mission is clear: ignite wonder, inspire learning, and champion conservation. We venture
+                        into uncharted territories, sharing the beauty and importance of nature. Through our expeditions
+                        and outreach, we cultivate a deep connection to the environment, fostering a sense of
+                        responsibility and driving conservation efforts.
                     </div>
                 </div>
             </div>
@@ -130,12 +142,13 @@
                     <i class="fa-solid fa-phone-volume fa-2xl"></i>
                     <h4>Call</h4>
                 </div>
-                <p>
+                <a href="tel:+9771123456789">
                     +977 1-123456789 (Office)
-                </p>
-                <p>
+                </a>
+                <br>
+                <a href="tel:+9782345678912">
                     +978 2-345678912 (BRG)
-                </p>
+                </a>
             </section>
 
             <section>
@@ -143,22 +156,22 @@
                     <i class="fa-regular fa-envelope fa-2xl"></i>
                     <h4>Mail</h4>
                 </div>
-                <p>
-                    info.brgtravel@gmail.com
-                </p>
+                <a href="mailto:info.brgtravel@gmail.com">info.brgtravel@gmail.com</a>
+                    
             </section>
         </div>
         <div id="copyright">
-                <div class="section">
-                    <i class="fa-solid fa-copyright"></i>
-                    <a href="https://ankit-poudel.com.np/" target="_blank">ankman007 2023. All Rights Reserved.</a>
-                </div>
-                <div class="section">
-                    Dhalpa-09, Kirtipur, Kathmandu
-                </div>
+            <div class="section">
+                <i class="fa-solid fa-copyright"></i>
+                <a href="https://ankit-poudel.com.np/" target="_blank">ankman007 2023. All Rights Reserved.</a>
+            </div>
+            <div class="section">
+                Dhalpa-09, Kirtipur, Kathmandu
+            </div>
         </div>
     </footer>
 
     <script src="app.js"></script>
 </body>
+
 </html>
