--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="shortcut icon" href="/Icons/globe-solid.svg" type="image/x-icon">
 
 <body>
-    <header>
+    <header id="nav">
         <div id="logo">
             <i class="fa-solid fa-passport fa-2xl"></i>
             <h2>BRG Travels</h2>
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <section>
+        <section id="services">
             <div id="departures" class="sec">
                 <i class="fa-solid fa-calendar-days fa-2xl"></i>
                 <div class="text">
@@ -74,7 +74,7 @@
             </div>
         </section>
 
-        <article>
+        <article id="article">
             <img src="Images/about.jpg" alt="swayambhunath">
             <div class="text">
                 <h2>Discover new horizons</h2>
@@ -117,7 +117,7 @@
         </figure>
     </main>
 
-    <footer>
+    <footer id="footer">
         <div id="partners">
             <h1>Partners</h1>
             <div id="logos">
@@ -137,7 +137,7 @@
                 </p>
             </section>
 
-            <section>
+            <section >
                 <div class="title">
                     <i class="fa-solid fa-phone-volume fa-2xl"></i>
                     <h4>Call</h4>
