Setting the footer

--- a/index.html
+++ b/index.html
@@ -142,12 +142,14 @@
                     <i class="fa-solid fa-phone-volume fa-2xl"></i>
                     <h4>Call</h4>
                 </div>
+                Office  :
                 <a href="tel:+9771123456789">
-                    +977 1-123456789 (Office)
+                    +977 1-123456789
                 </a>
                 <br>
+                BRG :
                 <a href="tel:+9782345678912">
-                    +978 2-345678912 (BRG)
+                    +978 2-345678912
                 </a>
             </section>
 
